--- a/public/app/partials/evezplace/create_store_step4.html
+++ b/public/app/partials/evezplace/create_store_step4.html
@@ -30,7 +30,7 @@
     <div class="row" style="margin-top: 10px; margin-bottom: 10px">
         <div class="form-group">
             <div class="col-md-offset-2 col-md-4">
-                <label for="storePhone1">Phone Numbers</label>
+                <label for="storePhone1">Phone Numbers <b style="color:red;">*</b></label>
             </div>
             <div class="col-md-4">
                 <input type="number" placeholder="Please enter 10 digits Phone Number" class="form-control" id="storePhone1" name="storePhone1"
@@ -42,7 +42,7 @@
     <div class="row" style="margin-top: 10px; margin-bottom: 10px">
         <div class="form-group">
             <div class="col-md-4 col-md-offset-6">
-                <input type="number" placeholder="Please enter 10 digits Phone Number" class="form-control" id="storePhone2" name="storePhone2"
+                <input type="number" placeholder="Please enter 10 digits Phone Number (optional)" class="form-control" id="storePhone2" name="storePhone2"
                        ng-model="formData.storePhone2" minlength="10" maxlength="12">
             </div>
         </div>
@@ -51,7 +51,7 @@
     <div class="row" style="margin-top: 10px; margin-bottom: 10px">
         <div class="form-group">
             <div class="col-md-4 col-md-offset-6">
-                <input type="number" placeholder="Please enter 10 digits Phone Number" class="form-control" id="storePhone3" name="storePhone3"
+                <input type="number" placeholder="Please enter 10 digits Phone Number (optional)" class="form-control" id="storePhone3" name="storePhone3"
                        ng-model="formData.storePhone3" minlength="10" maxlength="12">
             </div>
         </div>
