--- a/public/app/partials/payment/onlyOnline.html
+++ b/public/app/partials/payment/onlyOnline.html
@@ -1,9 +1,9 @@
 
                     <div class="col-md-3 col-xs-12 user-menu-btns">
                         <div class="btn-group-vertical square" id="responsive">
-                            <a ng-click="GetIndex(3);" class="btn btn-block {{currentSection3}}">
+                            <!-- <a ng-click="GetIndex(3);" class="btn btn-block {{currentSection3}}">
                                 <p style="font-size: 16px;">Pay Online</p>
-                            </a>
+                            </a> -->
                             <a ng-click="GetIndex(4);" class="btn btn-block {{currentSection4}}">
                                 <p style="font-size: 16px;">PayU Money</p>
                             </a>
