Manage Database menu added in community
manage database added, product menu replaced to bottom

--- a/public/app/partials/Community/advertise.html
+++ b/public/app/partials/Community/advertise.html
@@ -62,7 +62,10 @@
         <a href="#circles" class="btn btn-default btn-block">
             <p>Circles</p>
         </a>
-        <a href="" class="btn btn-default btn-block active">
+        <a  href="#manage/database" class="btn btn-default">
+            <p>Manage Database</p>
+        </a>
+        <a href="#advertise" class="btn btn-default btn-block active">
             <p>Advertise</p>
         </a>
        <!--<a href="#friends/invite" class="btn btn-default">
