--- a/public/app/partials/Community/community.html
+++ b/public/app/partials/Community/community.html
@@ -71,6 +71,9 @@
         <a id="step5"  data-toggle="tab" data-slide-to="4" href="#circles" class="btn btn-default">
             <p>Circles</p>
         </a>
+        <a  href="#manage/database" class="btn btn-default">
+            <p>Manage Database</p>
+        </a>
         <a id="step6"  data-toggle="tab" data-slide-to="5" href="#advertise" class="btn btn-default">
             <p>Advertise</p>
         </a>
