--- a/public/app/partials/Community/invitefriends.html
+++ b/public/app/partials/Community/invitefriends.html
@@ -62,6 +62,9 @@
         <a href="#circles" class="btn btn-default btn-block">
             <p>Circles</p>
         </a>
+        <a  href="#manage/database" class="btn btn-default">
+            <p>Manage Database</p>
+        </a>
         <a href="#advertise" class="btn btn-default btn-block ">
             <p>Advertise</p>
         </a>
