--- a/public/app/partials/evezplace/manage/store/promotion.html
+++ b/public/app/partials/evezplace/manage/store/promotion.html
@@ -54,9 +54,9 @@
                         </div>
                         <div class="col-sm-12" style="margin-top: 10px">
                             <div class="row">
-                                <img ng-src="{{addStores.slideImage.croppedImage}}"
+                                <img ng-src="{{filePath}}{{addStores.slideImage.croppedImage}}"
                                      style="width: 100%;"
-                                     alt=""/>
+                                     alt=""/><br><br>
                             </div>
                         </div>
                         <!--<div class="fileUpload btn btn-primary">-->
@@ -81,9 +81,9 @@
                         </div>
                         <div class="col-sm-12" style="margin-top: 10px">
                             <div class="row">
-                                <img ng-src="{{addStores.slideImage1.croppedImage}}"
+                                <img ng-src="{{filePath}}{{addStores.slideImage1.croppedImage}}"
                                      style="width: 100%;"
-                                     alt=""/>
+                                     alt=""/><br><br>
                             </div>
                         </div>
                         <!--<div class="fileUpload btn btn-primary">-->
@@ -108,9 +108,9 @@
                         </div>
                         <div class="col-sm-12" style="margin-top: 10px">
                             <div class="row">
-                                <img ng-src="{{addStores.slideImage2.croppedImage}}"
+                                <img ng-src="{{filePath}}{{addStores.slideImage2.croppedImage}}"
                                      style="width: 100%;"
-                                     alt=""/>
+                                     alt=""/><br><br>
                             </div>
                         </div>
                         <!--<div class="fileUpload btn btn-primary">-->
@@ -135,7 +135,7 @@
                         </div>
                         <div class="col-sm-12" style="margin-top: 10px">
                             <div class="row">
-                                <img ng-src="{{addStores.slideImage3.croppedImage}}"
+                                <img ng-src="{{filePath}}{{addStores.slideImage3.croppedImage}}"
                                      style="width: 100%;"
                                      alt=""/>
                             </div>
