--- a/public/app/partials/evezplace/manage/store/store_front.html
+++ b/public/app/partials/evezplace/manage/store/store_front.html
@@ -59,7 +59,7 @@
                         </div>
                         <div class="col-sm-12" style="margin-top: 10px">
                             <div class="row">
-                                <img ng-src="{{addCollage.LeftCollageImage.croppedImage}}"
+                                <img ng-src="{{filePath}}{{addCollage.LeftCollageImage.croppedImage}}"
                                      style="width: 100%;"
                                      alt=""/>
                             </div>
@@ -89,7 +89,7 @@
                         </div>
                         <div class="col-sm-12" style="margin-top: 10px">
                             <div class="row">
-                                <img ng-src="{{addCollage.RightCollageImage.croppedImage}}"
+                                <img ng-src="{{filePath}}{{addCollage.RightCollageImage.croppedImage}}"
                                      style="width: 100%;"
                                      alt=""/>
                             </div>
@@ -117,7 +117,7 @@
                     </div>
                     <div class="col-sm-12" style="margin-top: 10px">
                         <div class="row">
-                            <img ng-src="{{addCollage.BottomCollageImage.croppedImage}}"
+                            <img ng-src="{{filePath}}{{addCollage.BottomCollageImage.croppedImage}}"
                                  style="width: 100%;"
                                  alt=""/>
                         </div>
@@ -148,7 +148,7 @@
                         </div>
                         <div class="col-sm-12" style="margin-top: 10px">
                             <div class="row">
-                                <img ng-src="{{addCollage.ProfileCollageImage.croppedImage}}"
+                                <img ng-src="{{filePath}}{{addCollage.ProfileCollageImage.croppedImage}}"
                                      style="width: 100%;"
                                      alt=""/>
                             </div>
