--- a/public/app/partials/evezplace/create_store_step3.html
+++ b/public/app/partials/evezplace/create_store_step3.html
@@ -50,8 +50,8 @@
                     </div>
                 </div>
                 <div class="col-sm-12" style="margin-top: 10px">
-                    <div class="row">
-                        <img ng-src="{{addCollage.LeftCollageImage.croppedImage}}"
+                    <div class="row" ng-show="addCollage.LeftCollageImage.croppedImage">
+                        <img ng-src="{{filePath}}{{addCollage.LeftCollageImage.croppedImage}}"
                              style="width: 100%;"
                              alt=""/>
                     </div>
@@ -79,8 +79,8 @@
                     </div>
                 </div>
                 <div class="col-sm-12" style="margin-top: 10px">
-                    <div class="row">
-                        <img ng-src="{{addCollage.RightCollageImage.croppedImage}}"
+                    <div class="row" ng-show="addCollage.RightCollageImage.croppedImage">
+                        <img ng-src="{{filePath}}{{addCollage.RightCollageImage.croppedImage}}"
                              style="width: 100%;"
                              alt=""/>
                     </div>
@@ -107,8 +107,8 @@
                     </div>
                 </div>
                 <div class="col-sm-12" style="margin-top: 10px">
-                    <div class="row">
-                        <img ng-src="{{addCollage.BottomCollageImage.croppedImage}}"
+                    <div class="row" ng-show="addCollage.BottomCollageImage.croppedImage">
+                        <img ng-src="{{filePath}}{{addCollage.BottomCollageImage.croppedImage}}"
                              style="width: 100%;"
                              alt=""/>
                     </div>
@@ -138,8 +138,8 @@
                     </div>
                 </div>
                 <div class="col-sm-12" style="margin-top: 10px">
-                    <div class="row">
-                        <img ng-src="{{addCollage.ProfileCollageImage.croppedImage}}"
+                    <div class="row" ng-show="addCollage.ProfileCollageImage.croppedImage">
+                        <img ng-src="{{filePath}}{{addCollage.ProfileCollageImage.croppedImage}}"
                              style="width: 100%;"
                              alt=""/>
                     </div>
