--- a/public/app/partials/evezplace/create_store_step5.html
+++ b/public/app/partials/evezplace/create_store_step5.html
@@ -38,8 +38,8 @@
                     </div>
                 </div>
                 <div class="col-sm-12" style="margin-top: 10px">
-                    <div class="row">
-                        <img ng-src="{{addStores.slideImage.croppedImage}}"
+                    <div class="row" ng-show="addStores.slideImage.croppedImage">
+                        <img ng-src="{{filePath}}{{addStores.slideImage.croppedImage}}"
                              style="width: 100%;"
                              alt=""/>
                     </div>
@@ -65,8 +65,8 @@
                     </div>
                 </div>
                 <div class="col-sm-12" style="margin-top: 10px">
-                    <div class="row">
-                        <img ng-src="{{addStores.slideImage1.croppedImage}}"
+                    <div class="row" ng-show="addStores.slideImage1.croppedImage">
+                        <img ng-src="{{filePath}}{{addStores.slideImage1.croppedImage}}"
                              style="width: 100%;"
                              alt=""/>
                     </div>
@@ -92,8 +92,8 @@
                     </div>
                 </div>
                 <div class="col-sm-12" style="margin-top: 10px">
-                    <div class="row">
-                        <img ng-src="{{addStores.slideImage2.croppedImage}}"
+                    <div class="row" ng-show="addStores.slideImage2.croppedImage">
+                        <img ng-src="{{filePath}}{{addStores.slideImage2.croppedImage}}"
                              style="width: 100%;"
                              alt=""/>
                     </div>
@@ -119,8 +119,8 @@
                     </div>
                 </div>
                 <div class="col-sm-12" style="margin-top: 10px">
-                    <div class="row">
-                        <img ng-src="{{addStores.slideImage3.croppedImage}}"
+                    <div class="row" ng-show="addStores.slideImage3.croppedImage">
+                        <img ng-src="{{filePath}}{{addStores.slideImage3.croppedImage}}"
                              style="width: 100%;"
                              alt=""/>
                     </div>
