--- a/public/app/partials/evezplace/browse/store/place-order.html
+++ b/public/app/partials/evezplace/browse/store/place-order.html
@@ -408,13 +408,15 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.1);padding:0px;
                 <h4>Phone</h4>
             </div>
             <div class="col-md-8 col-xs-8" style="margin-top: 5px">
-                <input type="text"  ng-model="orderData.buyer.name" placeholder="Name" class="col-md-6 col-xs-12" required/>
+                <!-- <input type="text"  ng-model="orderData.buyer.name" id="name" placeholder="Name" class="col-md-6 col-xs-12" required/> -->
+                <p>{{orderData.buyer.name}}</p>
             </div>
             <div class="col-md-8 col-xs-8" style="margin-top: 5px">
-                <input type="email"  ng-model="orderData.buyer.email" placeholder="Email" class="col-md-6 col-xs-12" required/>
+                <!-- <input type="email"  ng-model="orderData.buyer.email" id="email" placeholder="Email" class="col-md-6 col-xs-12" required/> -->
+                <p>{{orderData.buyer.email}}</p>
             </div>
             <div class="col-md-8 col-xs-8" style="margin-top: 5px">
-                <input type="number" minlength="6" maxlength="13" ng-model="orderData.buyer.phone" placeholder="Phone" class="col-md-6 col-xs-12" required/>
+                <input type="number" maxlength="10" id="mobile" ng-model="orderData.buyer.phone" placeholder="Phone (10 digit)" class="col-md-6 col-xs-12" required/>
             </div>
         </div>
 
@@ -425,7 +427,7 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.1);padding:0px;
                     <h4>BuyerCode</h4>
                 </div>
                 <div class="col-md-2 col-xs-6" style="margin-top: 5px">
-                    <input class="form-control" type="text" ng-model="orderData.buyer.code" placeholder="BuyerCode"/>
+                    <input class="form-control" type="text" ng-model="orderData.buyer.code" id="buyercode" placeholder="BuyerCode"/>
                 </div>
                 <div class="col-md-2 col-xs-12">
                     <a href="" class="btn btn-default" ng-click="GetBuyerCode(orderData.buyer.code)" style="border:1px solid #16b594;margin-top:4px;margin-bottom:10px;">Submit</a>
@@ -445,13 +447,13 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.1);padding:0px;
                     <h4>Phone</h4>
                 </div>
                 <div class="col-md-8 col-xs-8" style="margin-top: 5px">
-                    <input type="text"  ng-model="orderData.buyer.name" placeholder="Name" class="col-md-6 col-xs-12" required/>
+                    <input type="text"  ng-model="orderData.buyer.name" id="BuyerName" placeholder="Name" class="col-md-6 col-xs-12" required/>
                 </div>
                 <div class="col-md-8 col-xs-8" style="margin-top: 5px">
-                    <input type="email"  ng-model="orderData.buyer.email" placeholder="Email" class="col-md-6 col-xs-12" required/>
+                    <input type="email"  ng-model="orderData.buyer.email" id="BuyerEmail" placeholder="Email" class="col-md-6 col-xs-12" required/>
                 </div>
                 <div class="col-md-8 col-xs-8" style="margin-top: 5px">
-                    <input type="number" minlength="6" maxlength="13" ng-model="orderData.buyer.phone" placeholder="Phone" class="col-md-6 col-xs-12" required/><br><br>
+                    <input type="number"  maxlength="10" id="BuyerPhone" ng-model="orderData.buyer.phone" placeholder="Phone (10 digit)" class="col-md-6 col-xs-12" required/><br><br>
                 </div>
             </div>
         </div>
@@ -574,7 +576,7 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.1);padding:0px;
                                        ng-model="orderData.billing_address.country" required>
                             </div>
                             <div class="col-md-12">
-                                <input type="text" ng-model="orderData.billing_address.pincode"
+                                <input type="number" ng-model="orderData.billing_address.pincode"
                                        class="form-control" required/>
                             </div>
                             <div class="col-md-12">
@@ -628,7 +630,7 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.1);padding:0px;
                                        ng-model="orderData.shipping_address.country" required>
                             </div>
                             <div class="col-md-12">
-                                <input type="text" class="form-control"
+                                <input type="number" class="form-control"
                                        ng-model="orderData.shipping_address.pincode" required/>
                             </div>
                         </div>
