--- a/public/app/partials/profile/mylisting.html
+++ b/public/app/partials/profile/mylisting.html
@@ -105,7 +105,7 @@
         </div>
 
         <!--For Member-->
-        <div class="col-md-10 user-menu user-pad" ng-if="Role != 1">
+        <div class="col-md-10 user-menu user-pad" ng-if="Role != 1 && loggedInUserId == currentUserId">
             <div class="col-md-12 col-xs-12">
                 <div class="col-md-12 col-xs-12 empty-section text-center">
                     <span class="fa fa-exclamation-circle" style="color: #e50880; font-size: 64px;"></span>
@@ -121,33 +121,32 @@
         </div>
 
         <!--For Admin-->
-        <div class="col-md-10 user-menu user-pad" ng-if="Role == 1">
+        <div class="col-md-10 user-menu user-pad" ng-if="Role == 1 && loggedInUserId == currentUserId">
             <div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
-			        <div class="fragment">
-			            <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
-			            <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Ads & Campaigns</h4>
-			            <p>
-			                Creation is just a start, Promotion, Word of mouth, Advertising, Marketing, Positioning all is key to carve a niche for yourself. This is a tool for you to create multiple ads or theme base d campaigns. We have automated creation to a great extent. You can stream in and out, with any frequency you think fit. 
-			            </p>
-			        </div>
-			    </div>
+		        <div class="fragment">
+		            <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
+		            <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Ads & Campaigns</h4>
+		            <p>
+		                Creation is just a start, Promotion, Word of mouth, Advertising, Marketing, Positioning all is key to carve a niche for yourself. This is a tool for you to create multiple ads or theme base d campaigns. We have automated creation to a great extent. You can stream in and out, with any frequency you think fit. 
+		            </p>
+		        </div>
+			</div>
 
-           
             <div class="col-md-12">
-
                 <div class="row" style="margin-bottom: 40px">
-
-
                     <div class="col-md-12 user-menu user-pad" ng-controller="classifiedProfileCtrl">
-
-                        <div class="col-md-3 col-md-offset-4 pull-right" ng-if="loggedInUserId == currentUserId" style="margin-top:10px;margin-bottom:10px;padding:0px;">
+                        <div class="col-md-3 col-md-offset-4 pull-right" style="margin-top:10px;margin-bottom:10px;padding:0px;">
                             <a href="#classifieds/create/step1" class="btn btn-primary"><span class="fa fa-plus"></span> Create Ads & Campaigns</a>
                         </div>
-                
+                        <!--No campaigns-->
                         <div class="empty-section text-center" ng-if="browseItems.length == 0">
                             <span class="fa fa-exclamation-circle" style="color: #e50880; font-size: 64px;"></span>
 
                             <h3 style="font-weight: 200">We can't seem to find any specials for this category around here</h3>
+                        </div>
+                        <!--spinner-->
+                        <div class="empty-section text-center" ng-hide="browseItems.length > 0">
+                            <span us-spinner="{radius:20, width:10, length: 10,color: '#e50880'}" spinner-key="spinner-1" spinner-start-active="false"></span>
                         </div>
                         <div class="browse-items">
                             <div class="row">
@@ -158,11 +157,10 @@
                                                 <div class="col-xs-6">
                                                     <a href="#classifieds/{{item.id}}/profile/view"  style="color: #ffffff;"><h5 style="padding: 10px">{{item.title}}</h5></a>
                                                 </div>
-                                                <div class="col-xs-6" ng-if="currentUserId == loggedInUserId">
+                                                <div class="col-xs-6">
                                                     <a href="#classified/{{item.id}}/manage/classified_type" class="pull-right" style="color: #ffffff; margin-top: 16px; margin-right: 5px">Manage Ads & Campaigns<span class="fa fa-chevron-right"></span></a>
                                                 </div>
                                             </div>
-
                                         </div>
                                         <div class="store-image-frame">
                                             <img ng-src="{{ImageUrlPath}}{{item.images[0].title_image_name}}" alt="" style="width: 100%"/>
@@ -177,7 +175,59 @@
                     </div>
                 </div>
             </div>
-
         </div>
+
+        <!--For Visiting friends profile-->
+        <div class="col-md-10 user-menu user-pad" ng-if="loggedInUserId != currentUserId">
+            <div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
+                <div class="fragment">
+                    <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
+                    <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Ads & Campaigns</h4>
+                    <p>
+                        Creation is just a start, Promotion, Word of mouth, Advertising, Marketing, Positioning all is key to carve a niche for yourself. This is a tool for you to create multiple ads or theme base d campaigns. We have automated creation to a great extent. You can stream in and out, with any frequency you think fit. 
+                    </p>
+                </div>
+            </div>
+
+            <div class="col-md-12">
+                <div class="row" style="margin-bottom: 40px">
+                    <div class="col-md-12 user-menu user-pad" ng-controller="classifiedProfileCtrl">
+                        <!--No campaigns-->
+                        <div class="empty-section text-center" ng-if="browseItems.length == 0">
+                            <span class="fa fa-exclamation-circle" style="color: #e50880; font-size: 64px;"></span>
+
+                            <h3 style="font-weight: 200">We can't seem to find any specials for this category around here</h3>
+                        </div>
+                        <!--spinner-->
+                        <div class="empty-section text-center" ng-hide="browseItems.length > 0">
+                            <span us-spinner="{radius:20, width:10, length: 10,color: '#e50880'}" spinner-key="spinner-1" spinner-start-active="false"></span>
+                        </div>
+                        <div class="browse-items">
+                            <div class="row">
+                                <div class="col-md-12" ng-repeat="item in browseItems">
+                                    <div class="browse-item">
+                                        <div class="store-browse-title">
+                                            <div class="row">
+                                                <div class="col-xs-6">
+                                                    <a href="#classifieds/{{item.id}}/profile/view"  style="color: #ffffff;"><h5 style="padding: 10px">{{item.title}}</h5></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="store-image-frame">
+                                            <img ng-src="{{ImageUrlPath}}{{item.images[0].title_image_name}}" alt="" style="width: 100%"/>
+                                        </div>
+                                        <div class="store-browse-desc">
+                                            <p>{{item.description}}</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
 </div>
