--- a/public/app/partials/profile/mystores.html
+++ b/public/app/partials/profile/mystores.html
@@ -108,7 +108,7 @@
         </div>
 
         <!--For Member-->
-        <div class="col-md-10 user-menu user-pad" ng-if="Role == 2">
+        <div class="col-md-10 user-menu user-pad" ng-if="Role == 2 && loggedInUserId == currentUserId">
             <div class="col-md-12 col-xs-12">
                 <div class="col-md-12 col-xs-12 empty-section text-center">
                     <span class="fa fa-exclamation-circle" style="color: #e50880; font-size: 64px;"></span>
@@ -124,7 +124,7 @@
         </div>
 
         <!--For Business-->
-        <div class="col-md-10 user-menu user-pad" ng-if="Role != 2">
+        <div class="col-md-10 user-menu user-pad" ng-if="Role != 2 && loggedInUserId == currentUserId">
             <div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
 		        <div class="fragment">
 		            <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
@@ -143,7 +143,7 @@
                 <div class="col-md-4">
                     <input type="text" class="form-control" placeholder="search stores" ng-model="storesearch"/>
                 </div>
-                <div class="col-md-2 col-md-offset-4 pull-right" ng-if="loggedInUserId == currentUserId">
+                <div class="col-md-2 col-md-offset-4 pull-right">
                     <a href="#store/create/step1" class="btn btn-primary"><span class="fa fa-plus"></span> Create Store</a>
                 </div>
             </div>
@@ -151,6 +151,10 @@
                 <span class="fa fa-exclamation-circle" style="color: #e50880; font-size: 64px;"></span>
 
                 <h3 style="font-weight: 200">We can't seem to find any specials for this category around here</h3>
+            </div>
+            <div class="empty-section text-center" ng-hide="browseMyItems.length > 0">
+                <span us-spinner="{radius:20, width:10, length: 10,color: '#e50880'}" spinner-key="spinner-1" spinner-start-active="false">
+                </span>
             </div>
             <div class="browse-my-items">
                 <div class="row">
@@ -161,7 +165,7 @@
                                     <div class="col-xs-6">
                                         <a href="#store/{{item.id}}/profile" style="color: #ffffff; font-size: 1.2em"><h5 style="padding: 10px">{{item.title}}</h5></a>
                                     </div>
-                                    <div class="col-xs-6" ng-if="loggedInUserId == currentUserId">
+                                    <div class="col-xs-6">
                                         <a href="#store/{{item.id}}/manage/store_info" class="btn btn-link btn-sm pull-right" style="color: #ffffff; margin-top: 16px; margin-right: 5px">manage store</a>
                                     </div>
                                 </div>
@@ -182,12 +186,67 @@
                     </div>
                 </div>
             </div>
-            <!--spinner-->
-            <div class="col-md-12" style="height:150px;">
+        </div>
+
+        <!--For visiting friends profile-->
+        <div class="col-md-10 user-menu user-pad" ng-if="loggedInUserId != currentUserId">
+            <div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
+                <div class="fragment">
+                    <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
+                    <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Stores</h4>
+                    <p>
+                        If you own a business, products or services or both, want to start a new one, This is the place for you.  We have made it simple for you. You get all the tools to  create your web store and promote it, tab by tab fill in details. Arm yourself with real bright images, get your script and description in place before hand, Go with the flow.
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-12 panel-heading">
+                <div class="col-md-2">
+                    <h4>
+                        Stores ({{browseMyItems.length}})
+                    </h4>
+                </div>
+                <div class="col-md-4">
+                    <input type="text" class="form-control" placeholder="search stores" ng-model="storesearch"/>
+                </div>
+            </div>
+            <div class="empty-section text-center" ng-if="browseMyItems.length == 0">
+                <span class="fa fa-exclamation-circle" style="color: #e50880; font-size: 64px;"></span>
+
+                <h3 style="font-weight: 200">We can't seem to find any specials for this category around here</h3>
+            </div>
+            <div class="empty-section text-center" ng-hide="browseMyItems.length > 0">
                 <span us-spinner="{radius:20, width:10, length: 10,color: '#e50880'}" spinner-key="spinner-1" spinner-start-active="false">
                 </span>
             </div>
-            <!--spinner ends-->
+            <div class="browse-my-items">
+                <div class="row">
+                    <div class="col-sm-12" ng-repeat="item in browseMyItems | filter:storesearch">
+                        <div class="browse-item">
+                            <div class="store-browse-title">
+                                <div class="row">
+                                    <div class="col-xs-6">
+                                        <a href="#store/{{item.id}}/profile" style="color: #ffffff; font-size: 1.2em"><h5 style="padding: 10px">{{item.title}}</h5></a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="store-image-frame" ng-if="item.profile_images.large_image_url != ''">
+                                <img ng-src="{{imageUrl}}{{item.profile_images.large_image_url}}" alt="" style="width: 100%"/>
+                            </div>
+                            <div class="store-image-frame" ng-if="item.profile_images.large_image_url == ''">
+                                <img ng-src="http://images.mid-day.com/images/2014/nov/Shyamal-and-Bhumika-Store-1.jpg" alt="" style="width: 100%"/>
+                            </div>
+                            <div class="store-image-frame" ng-if="item.profile_images.large_image_url == null">
+                                <img ng-src="http://images.mid-day.com/images/2014/nov/Shyamal-and-Bhumika-Store-1.jpg" alt="" style="width: 100%"/>
+                            </div>
+                            <div class="store-browse-desc">
+                                <p>{{item.description}}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+
     </div>
 </div>
