--- a/public/app/partials/Trending/trending.html
+++ b/public/app/partials/Trending/trending.html
@@ -221,7 +221,7 @@
                         <!--Recommendation-->
                         <div class="col-sm-12 zero-padding-left-right trending-description" style="margin-top:10px;margin-bottom:5px;" ng-show="mustHideOnWarning">
                             <textarea class="form-control" rows="4" placeholder="Add more text (optional)" maxlength="800" ng-model="recommendation"/>
-                            <span class="pull-right" ng-hide="recommendation == dirty">{{800 - recommendation.length}}</span>
+                            <span class="pull-right" ng-hide="recommendation == dirty" style="color:#E50880;">{{800 - recommendation.length}}</span>
                         </div>
                     </div>
                 </div>
