--- a/public/app/partials/profile/mydiscussion.html
+++ b/public/app/partials/profile/mydiscussion.html
@@ -156,7 +156,7 @@
         <h4>Start Discussion</h4>
         <input class="form-control" type="text" placeholder="Discussion Title"
                id="forum" ng-model="forum" maxlength="100" style="margin-bottom: 10px; height: 50px; font-size: 18px"/>
-            <span class="pull-right" ng-hide="forum == dirty">{{100 - forum.length}}</span>   
+        <span class="pull-right" ng-hide="forum == dirty" style="color:#E50880;">{{255 - forum.length}}</span>
         <textarea class="form-control" rows="4" placeholder="Description"
                   ng-model="description"/>
         <div class="row" style="padding-bottom: 10px">
