--- a/public/app/partials/Community/circle-details.html
+++ b/public/app/partials/Community/circle-details.html
@@ -151,8 +151,10 @@
         <h4>Edit Circle</h4>
         <input class="form-control" type="text" placeholder="Circle Title"
                id="circle" ng-model="selectedCircle.title" style="margin-bottom: 10px; height: 50px; font-size: 18px" maxlength="12"/>
+        <span class="pull-right" ng-hide="selectedCircle.title == dirty" style="color:#E50880;">{{12 - selectedCircle.title.length}}</span>
         <textarea class="form-control" rows="4" placeholder="Circle Description (optional)"
                   ng-model="selectedCircle.description" maxlength="255"/>
+        <span class="pull-right" ng-hide="selectedCircle.description == dirty" style="color:#E50880;">{{255 - selectedCircle.description.length}}</span>
         <div class="col-sm-12" >
             <h5>Visibility Settings</h5>
             <select class="form-control" id="sub-visibility-type"
