--- a/public/app/partials/Community/circles.html
+++ b/public/app/partials/Community/circles.html
@@ -127,8 +127,10 @@
         <h4>Add Circle</h4>
         <input class="form-control" type="text" placeholder="Circle Title"
                id="circle" ng-model="circle" style="margin-bottom: 10px; height: 50px; font-size: 18px" maxlength="12"/>
+        <span class="pull-right" ng-hide="circle == dirty" style="color:#E50880;">{{12 - circle.length}}</span>
         <textarea class="form-control" rows="4" placeholder="Circle Description (optional)"
                   ng-model="description" maxlength="255"/>
+        <span class="pull-right" ng-hide="description == dirty" style="color:#E50880;">{{255 - description.length}}</span>
         <div class="col-sm-12" >
             <h5>Visibility Settings</h5>
             <select class="form-control" id="sub-visibility-type"
