--- a/public/app/partials/admin/albums.html
+++ b/public/app/partials/admin/albums.html
@@ -51,8 +51,10 @@
         <h4>Add album</h4>
         <input class="form-control" type="text" placeholder="Album Title"
                id="circle" ng-model="album" style="margin-bottom: 10px; height: 50px; font-size: 18px" maxlength="15"/>
+        <span class="pull-right" ng-hide="album == dirty" style="color:#E50880;">{{15 - album.length}}</span>
         <textarea class="form-control" rows="4" placeholder="Album Description (optional)"
                   ng-model="description" maxlength="100"/>
+        <span class="pull-right" ng-hide="description == dirty" style="color:#E50880;">{{100 - description.length}}</span>
         <div class="col-sm-12" >
             <h5>Visibility Settings</h5>
             <select class="form-control" id="sub-visibility-type"
