--- a/public/app/partials/profile/myAlbum.html
+++ b/public/app/partials/profile/myAlbum.html
@@ -131,10 +131,11 @@
     <div class="ngdialog-buttons popuptemplate" ng-controller="albums">
         <h4>Add album</h4>
         <input class="form-control" type="text" placeholder="Album Title"
-               id="circle" ng-model="album" maxlength="100" style="margin-bottom: 10px; height: 50px; font-size: 18px"/>
-               <span class="pull-right" ng-hide="album == dirty">{{100 - album.length}}</span>
+               id="circle" ng-model="album" maxlength="15" style="margin-bottom: 10px; height: 50px; font-size: 18px"/>
+        <span class="pull-right" ng-hide="album == dirty" style="color:#E50880;">{{15 - album.length}}</span>
         <textarea class="form-control" rows="4" placeholder="Album Description (optional)"
-                  ng-model="description"/><br>
+                  ng-model="description" maxlength="100"/>
+        <span class="pull-right" ng-hide="description == dirty" style="color:#E50880;">{{100 - description.length}}</span><br>
         <button class="btn primary pull-right form-control" type="button" ng-click="SaveAlbum()">Add</button>
     </div>
 </script>
